2017-06-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-728

	* src/m_cloudradar.cc (iyActiveSingleScat): Made a switch to use,
	get_ppath_pmat_and_tmat that is needed for handling remaining
	jacobians. Changes below side-effects. But the switch made the
	calculations nearly double as long. Reason should be checked.

	* src/m_transmitter.cc (iyTransmissionStandard):
	* src/m_rte.cc (iyEmissionStandard):
	* src/m_fos.cc (iyHybrid): Adopted call of get_ppath_pmat_and_tmat.

	* src/rte.cc (get_ppath_pmat_and_tmat): Added scat_data_single as
	output argument.

2017-06-16  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-727

	* src/lineshapesdata.h: Updated to fit with line mixing scenario

	* src/m_linemixing.cc: Using the updated line shape functions 
	better
	
	* src/rte.cc: Changed order of two RT loops to be frequency-first 
	so that OpenMP can be applied
	
2017-06-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-726

	* src/docserver.cc (Docserver::list_agendas):

	Fix bug introduced in arts-2-3-677. Workspace variables were not listed
	correctly. Reported by Jana.

2017-06-16  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-725

	* src/m_oem.cc (oem_template): Fixed passing of ml_ga_settings to
	invlib. Bug reported by Theresa.

	* 3rdparty/invlib/*: invlib update.

2017-06-14  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-724

	* src/parser.cc (parse_matrix):

	For empty matrices, ncols was set to 1. Fixed and cleaned up code. Bug
	reported by Patrick.

	* controlfiles/CMakeLists.txt:

	Use OEM_SUPPORT variable instead of NO_OEM.

2017-06-14  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-723

	* src/workspace.cc: Somne extension of description of the
	covariance matrices used by OEM.

	* controlfiles/artscomponents/oem/TestOEM.arts: A small extension
	to indicate that x, yf, and jacobian can both be empty or
	pre-calculated.

2017-06-14  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>
